# mealhealth

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  DESIGN_baseline_diet.md  DESIGN_sodium.md  PLAN_omega3_sodium.md  README.md  REUSE.toml  pyproject.toml  ruff.toml
.github/workflows/: checks.yml  docs.yml  typecheck.yml
LICENSES/: LicenseRef-GDD-NonCommercial.txt  LicenseRef-IHME-NonCommercial.txt  LicenseRef-MealHealth-NonCommercial-Data.txt  LicenseRef-WHO-GHE-Terms.txt
docs/: api.md  conf.py  data_sources.md  food_groups.md  index.md  installation.md  methodology.md  usage.md
docs/_static/: custom.css
docs/development/: data_build.md  index.md
docs/development/design/: baseline_diet.md  index.md  sodium.md
docs/examples/: across_countries.md  age_gradient.md  comparing_meals.md  dose_response.md  first_assessment.md  index.md  mhstyle.py  sodium.md  under_the_hood.md
docs/guide/: food_groups.md  installation.md  interpreting.md  quickstart.md  troubleshooting.md
docs/model/: data_sources.md  licensing.md  limitations.md  methodology.md
docs/reference/: api.md  glossary.md
src/mealhealth/: __init__.py  api.py  data.py  foodgroups.py  model.py  py.typed  sodium.py  sodium_artifact.py
src/mealhealth/data/: DATA_PROVENANCE.md  baseline_calories.csv  baseline_exposure.csv  baseline_intake.csv  baseline_mediators.csv  baseline_nutrients.csv  gbd_reference_life_table.csv  life_table.csv  local_life_table.csv  mortality.csv  population.csv  relative_risks.csv  sodium_relative_risks.csv
tests/: test_assessment.py  test_baseline_calories.py  test_baseline_exposure.py  test_baseline_mediators.py  test_baseline_nutrients.py  test_build_data.py  test_curves.py  test_external_source_validation.py  test_individual_handcalc.py  test_prepare_data.py  test_sodium_artifact.py  test_sodium_coefficients.py  test_sodium_mean_shift.py  test_sodium_runtime.py  test_sodium_source_builders.py  test_substitution.py  test_who_ghe_mortality.py
tools/: __init__.py  baseline_diet_from_foodopt.py  baseline_diet_from_glade.py  build_baseline_calories.py  build_baseline_exposure.py  build_baseline_mediators_from_gbd.py  build_baseline_nutrients_from_gbd.py  build_data.py  build_sodium_relative_risks.py  dietary_exposure_sources.py  generate_rr_age_attenuation.py  generate_sbp_age_attenuation.py  prepare_data.py  prototype_sodium_runtime.py  source_schemas.py  validate_sodium_coefficients.py
tools/reference/: baseline_country_sources.csv  red_meat_rr_log_linear.csv  rr_age_attenuation.csv  rr_tmrel.csv  sbp_age_attenuation.csv  sodium_to_sbp.json
