# SPDX-FileCopyrightText: 2026 Koen van Greevenbroek
#
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mealhealth"
version = "0.1.0"
description = "Healthiness metric for a meal: change in years of life lost from eating it daily, via Global Burden of Disease relative risks."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Koen van Greevenbroek" }]
keywords = ["health", "diet", "global burden of disease", "years of life lost", "nutrition"]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "reuse>=3",
    "openpyxl>=3",   # only needed to re-run tools/prepare_data.py (GBD RR XLSX)
    "pycountry>=22",  # only needed to re-run tools/prepare_data.py (mortality)
]

[project.urls]
Repository = "https://github.com/Sustainable-Solutions-Lab/mealhealth"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mealhealth = ["data/*.csv", "data/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
