# SPDX-FileCopyrightText: 2026 Koen van Greevenbroek
#
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mealhealth"
version = "0.1.0"
description = "Healthiness metric for a meal: change in years of life lost from eating it daily, via Global Burden of Disease relative risks."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Koen van Greevenbroek" }]
keywords = ["health", "diet", "global burden of disease", "years of life lost", "nutrition"]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[project.urls]
Repository = "https://github.com/Sustainable-Solutions-Lab/mealhealth"
Documentation = "https://sustainable-solutions-lab.github.io/mealhealth/"

# Development and docs tooling live in PEP 735 dependency groups, not in
# published extras. `uv run` installs the `dev` group automatically; build the
# docs with `uv run --group docs sphinx-build -b html docs docs/_build/html`.
[dependency-groups]
dev = [
    "mypy>=1.11",
    "pandas-stubs>=2.2",
    "pytest>=7",
    "ruff>=0.5",
    "reuse>=3",
    "openpyxl>=3",   # needed by the tools/build_data.py workflow
    "pycountry>=22",  # needed by the tools/build_data.py workflow
]
docs = [
    "sphinx>=8",
    "myst-parser>=4",
    "furo>=2024.8",
    "sphinx-copybutton>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mealhealth = ["data/*.csv", "data/*.md", "py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
files = ["src/mealhealth", "tools"]
strict = true
